fix: Revert overflow handing in c9af1d0

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -47,9 +47,6 @@
 
   counter-reset: table-num
 
-  div:has(table)
-    overflow-x: auto
-
   >table, div>table
     min-width: 60%
     margin-top: 1.5em
